Fix header z-index

--- a/components/dashboard/Dashboard.module.css
+++ b/components/dashboard/Dashboard.module.css
@@ -86,7 +86,7 @@
     .menu {
         position: absolute;
         top: 2rem;
-        padding: 0;
+        padding: 1.5rem 0 1rem;
         width: 0;
         overflow: hidden;
         border-right: none;
