--- a/components/layout/navbar/Navbar.module.css
+++ b/components/layout/navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .header {
     background-color: var(--bgWhite);
     box-shadow: 1px 2px 3px var(--shadow);
-    z-index: 1;
+    z-index: 34;
     transition: transform 200ms ease-in-out;
 }
 
